--- a/1月23/直线.html
+++ b/1月23/直线.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Three框架</title>
+    <title>颜色渐变的直线</title>
     <script src="three.min.js"></script>
     <style type="text/css">
         body,html{
