--- a/1月23/旋转的正方体.html
+++ b/1月23/旋转的正方体.html
@@ -17,7 +17,12 @@
     var material = new THREE.MeshBasicMaterial({color: 0xff0000})
     var cube = new THREE.Mesh(geometry, material)
     scene.add(cube)
-    camera.position.z = 15
+    camera.position.y = 15
+    camera.position.x = 15
+    camera.lookAt(0,0,0)
+    // 绘制坐标系
+    var axisHelpter = new THREE.AxisHelper(4)
+    scene.add(axisHelpter)
     function render () {
         requestAnimationFrame(render)
         cube.rotation.y += 0.01
