--- a/1月23/旋转的坐标轴、正方体.html
+++ b/1月23/旋转的坐标轴、正方体.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>正方体</title>
+    <title>Object3D包含一些实体</title>
     <style>canvas { width: 100%; height: 100% }</style>
     <script src="./three.min.js"></script>
 </head>
@@ -16,17 +16,22 @@
     var geometry = new THREE.CubeGeometry(2,2,2)
     var material = new THREE.MeshBasicMaterial({color: 0xff0000})
     var cube = new THREE.Mesh(geometry, material)
-    scene.add(cube)
+    var geometryTotal = new THREE.Object3D()
+    geometryTotal.add(cube)
+//    scene.add(cube)
     camera.position.y = 15
     camera.position.x = 15
     camera.lookAt(0,0,0)
     // 绘制坐标系
     var axisHelpter = new THREE.AxesHelper(4)
-    scene.add(axisHelpter)
+//    scene.add(axisHelpter)
+    geometryTotal.add(axisHelpter)
+    scene.add(geometryTotal)
     function render () {
         requestAnimationFrame(render)
-        cube.rotation.y += 0.01
-        cube.rotation.x -= 0.01
+//        cube.rotation.y += 0.01
+//        cube.rotation.x -= 0.01
+        geometryTotal.rotation.x += 0.01
         renderer.render(scene, camera)
     }
     render()
